Use material-icons-scss

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,6 @@
 
+@import '@whaaaley/material-icons-scss/style/filled';
 @import 'styles/colors';
-@import 'styles/icons';
 
 @import 'styles/fonts';
 @import 'styles/reset';
