add message merge/remove and savable token and channel id

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -7,3 +7,11 @@ $light: rgb(220, 221, 222);
 
 $background: rgb(54, 57, 63);
 $input: rgb(64, 68, 75);
+
+// discord default roles
+$blue: rgb(52, 152, 219);
+$pink: rgb(233, 30, 99);
+
+// temp
+$hover: rgb(50, 53, 59);
+$header: rgb(47, 49, 54);
